<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RemoteX</string>
    <string name="ipbar">IP Address</string>
    <!-- Titles -->
    <string name="iptitle">Enter Connection Details</string>
    <string name="preferences">Preferences</string>
    <string name="instructs">RemoteX Instructions</string>
	<string name="mainscreen">RemoteX</string>
	<string name="remoteselector">Remotes Screen</string>
    
 	<string name="ipformat">Must be of the form 127.0.0.1</string>
	<string name="ipport">Port</string>
	<string name="ipbutton">Connect</string>
	<string name="ipscreen">TCP/IP Connection</string>
	
	<string name="about">RemoteX\n\n Written by Bati Sengul (Focus)</string>
	<string name="iplist">Previous Connections</string>
	<string name="mousescreen">Drag your finger around to move.\n\nTap to click\n\nPress and hold to drag windows around.\n\nGet the keyboard up using the menu button.</string>
	<string name="mousebutton">Keyboard/Mouse</string>
	<string name="remote">Remotes</string>
	<string name="new_remote_list">Add Remote</string>
	
	<string name="save">Save</string>
	<string name="discard">Discard</string>
	
	<string name="instruct_server">You need the server installed on your computer before you can use this app.</string>
	<string name="instruct_port">Default port is 1987 on both the app and the server.</string>
	<string name="instruct_ip">To find your ip use  ifconfig  on *nix and  ipconfig  on Windows.</string>
	<string name="instruct_finger">Tap to click and use the keyboard for typing. Enjoy!</string>
	<string name="instruct_license">This software is available under the Apache license.</string>
	<string name="instruct_signature">Happy clicking,\nFocus</string>
	
	<string name="title">Title</string>
	<string name="search_parameter">Search Parameter</string>
	<string name="ctrl">CTRL</string>
	<string name="alt">ALT</string>
	<string name="play">Play</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="stop">Stop</string>
	<string name="full_screen">Full Screen</string>
	
	<string name="settings">Settings</string>
	<string name="instructions">Instructions</string>
</resources>
