<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <LinearLayout android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:layout_weight="1">
    <EditText 
    	android:id="@+id/EditTextIP" 
    	android:inputType="phone"
    	android:layout_height="wrap_content"  
    	android:hint="@string/ipbar"
    	android:layout_width="fill_parent"
    	android:layout_weight="3"
    	android:layout_gravity="left|center_vertical"
    >
    </EditText>
    <EditText 
    	android:id="@+id/EditTextPort"
    	android:inputType="phone"  
    	android:layout_height="wrap_content"  
    	android:hint="@string/ipport"
    	android:layout_width="150px"
    	android:layout_gravity="right|center_vertical"
    	android:maxLength="5"
    	android:layout_weight="1"
    >
    </EditText>
    </LinearLayout>
    <Button  
        android:id="@+id/ButtonIP"  
        android:layout_height="wrap_content"  
        android:text="@string/ipbutton"  
        android:onClick="ipExtract"  
        android:layout_width="fill_parent">  
    </Button>
    <TextView android:textSize="7pt"
    	android:background="#222222"
    	android:textColor="#FFFFFF"
    	android:text="@string/iplist"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10px"/>
    <ListView android:id="@+id/iplist"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" />
</LinearLayout>
