<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="12pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/remote_edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="7pt" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_parameter"
            android:textSize="12pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/remote_edit_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="7pt" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="12pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/remote_edit_play"
                android:maxLength="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:textSize="7pt"
                android:width="10dp" />

            <CheckBox
                android:id="@+id/remote_edit_play_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/ctrl" />

            <CheckBox
                android:id="@+id/remote_edit_play_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/alt" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textSize="12pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/remote_edit_previous"
                android:maxLength="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:textSize="7pt"
                android:width="10dp" />

            <CheckBox
                android:id="@+id/remote_edit_previous_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/ctrl" />

            <CheckBox
                android:id="@+id/remote_edit_previous_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/alt" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="12pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/remote_edit_next"
                android:maxLength="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:textSize="7pt"
                android:width="10dp" />

            <CheckBox
                android:id="@+id/remote_edit_next_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/ctrl" />

            <CheckBox
                android:id="@+id/remote_edit_next_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/alt" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="12pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/remote_edit_stop"
                android:maxLength="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:textSize="7pt"
                android:width="10dp" />

            <CheckBox
                android:id="@+id/remote_edit_stop_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/ctrl" />

            <CheckBox
                android:id="@+id/remote_edit_stop_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/alt" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_screen"
            android:textSize="12pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/remote_edit_fs"
                android:maxLength="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:textSize="7pt"
                android:width="10dp" />

            <CheckBox
                android:id="@+id/remote_edit_fs_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/ctrl" />

            <CheckBox
                android:id="@+id/remote_edit_fs_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/alt" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2pt"
            android:background="#3f3f3f" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/remote_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exitButtonPress"
                android:text="@string/save" />

            <Button
                android:id="@+id/remote_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exitButtonPress"
                android:text="@string/discard" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>